# ORBAT-Sorter

./: .gitignore  Cargo.toml  index.html  styles.css
.github/workflows/: tauri.yaml
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  role.rs
