[package]
name = "orbat_sorting"
version = "0.1.0"
description = "A Tauri App"
authors = ["Esmeray"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.6.6", features = ["updater", "shell-open"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"

strum = "0.26.2"
strum_macros = "0.26.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
